--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,5 +19,17 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
+# en:
+#   hello: "Hello world"
+
 en:
-  hello: "Hello world"
+  activerecord:
+    attributes:
+      subject:
+        rate: "Rate"
+    errors:
+      models:
+        subject:
+          attributes:
+            rate:
+              minimum: "is incomplete (make sure to have a $ sign before the amount"
